test-ex/phase1/test_2.out
test-ex/test_2.spl:3:9: [31merror:[0m function definition not allowed here. [[31mB[0m]
       3 |    int [31mfoo()[0m;
         |        [31m^~~~~[0m
